--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,12 +1,8 @@
-.main {
-  background-color: #f6f6f6;
-  height: 100vh;
-}
-
 .container {
   height: 90vh;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
